# JewelBattle.Server

./: .gitignore  CMakeLists.txt  README  start.sh
code/: CMakeLists.txt
code/GameServer/: CMakeLists.txt  main.cpp
code/LogServer/: CMakeLists.txt  main.cpp
code/client/: CMakeLists.txt  main.cpp
code/common/: CMakeLists.txt  JB_define.h
code/common/3lib/: CMakeLists.txt
code/common/Config/: CMakeLists.txt  GlobalConfig.cpp  GlobalConfig.h  db_config.lua
code/common/DBTool/: CMakeLists.txt  DBConn.cpp  DBConn.h
code/common/DebugTool/: CMakeLists.txt  Debug.cpp  Debug.h
code/common/NET/: JB_NET.h
code/common/Utils/: CMakeLists.txt  Singleton.h  TimeHelper.cpp  TimeHelper.h
code/common/net/: CMakeLists.txt  JB_net.cpp
code/test/: CMakeCache.txt  CMakeLists.txt  HelloWorld  Makefile  MyMath.cpp  cmake_install.cmake  main.cpp
doc/: JewelBattle.txt  cmakeHelp.txt
